(lang dune 3.14)

(name riven)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project


(using menhir 3.0)